--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: África Santeliz
 description: Práctica MP08 - Static Site Generators
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: {{ site.baseurl }}/images/Logo.jpg
+avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
