--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: África Santeliz
+name: Africa Santeliz
 
 # Short bio or description (displayed in the header)
 description: Práctica MP08 - Static Site Generators
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: {{ site.baseurl }}/images/Logo.jpg
+avatar: 
 
 #
 # Flags below are optional
@@ -21,11 +21,11 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: https://github.com/AfricaSR
+  github: 
   instagram:
   linkedin:
   pinterest:
-  rss: 
+  rss: # just type anything here for a working RSS icon
   twitter: 
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
